<font color=#FF8C00>&#9830;</font> Misc: Add option to show UnitNames on mouseover. (Credits nightcracker - ncHoverName)
<font color=#FF8C00>&#9830;</font> Skins: More work on the ObjectiveTracker
<font color=#FF8C00>&#9830;</font> Chat: Add a special Chat Icon to my toons -- All Credits belong to Darth Predator (ElvUI_SLE)

<b><u> v1.35, 28.04.2016</b></u>
<font color=#FF8C00>&#9830;</font> Fix a typo.

<b><u> v1.34, 26.04.2016</b></u>
<font color=#FF8C00>&#9830;</font> Forgot StarCraft 2 Icon in the FriendsList.
<font color=#FF8C00>&#9830;</font> Move the FriendsList Textures to an own Folder.
<font color=#FF8C00>&#9830;</font> Update RealLinks. (Credits Wetxius)
<font color=#FF8C00>&#9830;</font> Update BlizzBugs.

<b><u> v1.33, 25.04.2016</b></u>
<font color=#FF8C00>&#9830;</font> Delete QuickArmoryLink.
<font color=#FF8C00>&#9830;</font> Add RealLinks (by p3lim) bugs a bit by Warforged or timless Items.
<font color=#FF8C00>&#9830;</font> Change Nameplate Font to TukUI Font.
<font color=#FF8C00>&#9830;</font> Add more Frames to blizzMove.
<font color=#FF8C00>&#9830;</font> Overhaul the FriendsList Skin. Based on Azilroka's EnhancedFriendsList.

<b><u> v1.32, 19.04.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Added BenikUI's option to change castbar text color (classcolor).
<font color=#FF8C00>&#9830;</font> GameMenu: Adjust the StrataLevel of the Top Style Bar.
<font color=#FF8C00>&#9830;</font> ObjectivTracker: For some reason some textures are left. Now hide them.
<font color=#FF8C00>&#9830;</font> Skins: The Glyph Background are now transparent.
<font color=#FF8C00>&#9830;</font> Skins: Overhaul the SpellBook Skin. (Code taken from AddOnSkins, a little bit at least :D)
<font color=#FF8C00>&#9830;</font> Misc: Code Cleanup.

<b><u> v1.31, 08.04.2016</b></u>