@@ -6,6 +6,7 @@
 * Misc: Add option to show UnitNames on mouseover. (Credits nightcracker - ncHoverName)
 * Skins: More work on the ObjectiveTracker
 * Chat: Add a special Chat Icon to my toons -- All Credits belong to Darth Predator (ElvUI_SLE)
+* Update RealLinks. (Credits Wetxius)
 
 ** v1.35, 28.04.2016**
 * Fix a Typo.
